--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,12 @@ name: Publish And Deploy Demo
 on:
   # 监听 push 操作
   push:
-    branches:
+    #branches:
       # main 分支
-      - main
-    #tags:        
-      #- v.*
+      #- 'main'
+      #- 'releases/**'
+    tags:        
+      - v.*
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
