--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
         # 然后通过 pm2 进行管理启动
         script: |
           cd /usr/local/nginx/web/nuxt-web
+          rmdir build
           wget https://github.com/bobo88/test-actions/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
 
