--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
 ## 企业微信登录APPID
 APP_ID='prod'
 ## 域名请求接口
-REACT_APP_API_PATH= http://ycy88.com/prod
+REACT_APP_API_PATH= 'http://www.ycy88.com/prod'
