--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 ## 企业微信登录APPID
 APP_ID='test'
 ## 域名请求接口
-REACT_APP_API_PATH= http://ycy88.com/test
+REACT_APP_API_PATH= 'http://www.ycy88.com/test'
